--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint .",
     "test": "jest",
+    "e2e": "jest --runInBand",
     "coverage": "jest --coverage",
     "doc": "jsdoc -c jsdoc.conf.json",
     "preshow:coverage": "npm run coverage",
@@ -35,6 +36,7 @@
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^1.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "puppeteer": "^13.1.1",
     "terser-webpack-plugin": "^5.0.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.11.1",
@@ -43,7 +45,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "core-js": "^3.20.2"
+    "core-js": "^3.20.3"
   },
   "repository": "git+https://github.com/KeciLust/TETSTING__AHJ-19.git",
   "bugs": {
